development-tools/k8s/manifest-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: development-tools-deployment
spec:
  selector:
    matchLabels:
      app: development-tools
  replicas: 1
  template:
    metadata:
      labels:
        app: development-tools
    spec:
      containers:
      - name: development-tools
        image: localhost:5000/development-tools:28
        ports:
        - containerPort: 8080
