development-tools/k8s/manifest-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: development-tools
spec:
  selector:
    app: development-tools
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
